--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "start": "bun run index.ts",
+    "dev":"bun --watch index.ts"
+  },
+  "dependencies": {
+    "@types/figlet": "^1.5.8",
+    "figlet": "^1.7.0"
   }
 }
